--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
@@ -20,7 +21,7 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.0"
   },
